Update overflow, scroll, and row headings demos. Correct a bug.

--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -7,6 +7,6 @@ html {
 	background: oColorsGetColorFor('page', 'background');
 }
 
-// .o-table-container {
-// 	max-width: 600px;
-// }
+.o-table-demo-constrain {
+	max-width: 600px;
+}
