--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -45,7 +45,7 @@
 				@include oIconsGetIcon('arrows-up-down', $container-width: 20,  $container-height: 20, $iconset-version: 1);
 				content: '';
 				margin-right: -20px;
-				vertical-align: top;
+				vertical-align: middle;
 			}
 		}
 		// Show descending icon with DSC sort applied.
@@ -53,7 +53,7 @@
 		&[aria-sort='descending'] button {
 			&:after {
 				@include oIconsGetIcon('arrow-down', $container-width: 20,  $container-height: 20, $iconset-version: 1);
-				vertical-align: top;
+				vertical-align: middle;
 			}
 		}
 		// Show ascending icon with ascending sort applied or on hover with no sort.
@@ -63,7 +63,7 @@
 		&[aria-sort='ascending'] button {
 			&:after {
 				@include oIconsGetIcon('arrow-up', $container-width: 20,  $container-height: 20, $iconset-version: 1);
-				vertical-align: top;
+				vertical-align: middle;
 			}
 		}
 	}
